--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,171 @@
-
+#code {
+	   width: 50%;
+	   resize: none;
+	   height: 89.9%;
+	   font-size: 20px;
+	   font-family: times new roman;
+	   outline: none;
+	   background-color: lightgrey;
+	   border: 1px solid grey;
+	   float: left;
+	   font-family: sans-serif;
+	   position: absolute;
+	   top: 61px;
+	   left: 31px;
+	}
+	#outputbox {
+	   float: left;
+	   width: 47.3%;
+	   height: 90.5%;
+	   background-color: lightgrey;
+	   border: 1px solid grey;
+	   word-wrap: break-word;
+	   float: right;
+	   position: absolute;
+	   top: 61px;
+	   right: 0px;
+	   overflow: auto;
+	}
+	body {
+	   background-color: white;
+	   overflow: hidden;
+	   color: #343a40;
+	}
+	#lines {
+	   float: left;
+	   width: 30px;
+	   border: 1px solid grey;
+	   height: 91.5%;
+	   background-color: lightgrey;
+	   font-size: 20px;
+	   overflow: hidden;
+	   position: absolute;
+	   top: 61px;
+	   height: 90.5%;
+	   left: 0px;
+	}
+	#runbutton {
+	   cursor: pointer;
+	}
+	.runbutton {
+	   width: 100px;
+	   height: 99%;
+	   border: transparent;
+	   background-color: transparent;
+	   font-size: 30px;
+	}
+	.runbutton:hover {
+	   background-color: darkgrey;
+	}
+	#runbutton:focus {
+	   outline: 0;
+	}
+	.runbutton2 {
+	   width: 100px;
+	   height: 99%;
+	   border: transparent;
+	   background-color: transparent;
+	   font-size: 30px;
+	}
+	.runbutton2:hover {
+	   background-color: darkgrey;
+	}
+	.runbutton3 {
+	   width: 100px;
+	   height: 99%;
+	   border: transparent;
+	   background-color: transparent;
+	   font-size: 30px;
+	}
+	.runbutton3:hover {
+	   background-color: darkgrey;
+	}
+	.runbutton4 {
+	   width: 100px;
+	   height: 99%;
+	   border: transparent;
+	   background-color: transparent;
+	   font-size: 30px;
+	}
+	.runbutton4:hover {
+	   background-color: darkgrey;
+	}
+	#popup {
+	   top: 30%;
+	   left: 36%;
+	   position: absolute;
+	   width: 400px;
+	   height: 200px;
+	   border: 1px solid white;
+	   background-color: white;
+	   visibility: hidden;
+	   resize: both;
+	   overflow: auto;
+	   min-width: 400px;
+	   min-height: 200px;
+	   resize: true;
+	}
+	#menu {
+	   border: 1px solid grey;
+	   background-color: #e0e0e0;
+	   width: 100%;
+	   height: 60px;
+	   position: absolute;
+	   top: 0px;
+	   left: 0px;
+	}
+	.close {
+	   float: right;
+	   background: transparent;
+	   border: transparent;
+	   outline: transparent;
+	}
+	.close:hover {
+	   border: 1px solid darkgrey;
+	   border-radius: 5px;
+	}
+	.noselect {
+	   -webkit-touch-callout: none;
+	   /* iOS Safari */
+	   -webkit-user-select: none;
+	   /* Safari */
+	   -khtml-user-select: none;
+	   /* Konqueror HTML */
+	   -moz-user-select: none;
+	   /* Firefox */
+	   -ms-user-select: none;
+	   /* Internet Explorer/Edge */
+	   user-select: none;
+	   /* Non-prefixed version, currently
+	                                 supported by Chrome and Opera */
+	   cursor: pointer;
+	}
+	.runbutton5 {
+	   width: 120px;
+	   height: 99%;
+	   border: transparent;
+	   background-color: transparent;
+	   font-size: 30px;
+	}
+	.runbutton5:hover {
+	   background-color: darkgrey;
+	}
+	#settings {
+	   top: 15%;
+	   left: 18%;
+	   position: absolute;
+	   width: 800px;
+	   height: 400px;
+	   border: 1px solid white;
+	   background-color: white;
+	   visibility: hidden;
+	}
+	#console {
+	   position: absolute;
+	   bottom: 0px;
+	   left: 0px;
+	   width: 100%;
+	   height: 10%;
+	   background-color: white;
+	   visibility: hidden;
+	}
